improve submitting and doubt structure

--- a/changes
+++ b/changes
@@ -1,3 +1,1 @@
-student status update same session
-remove set_status etc from Student and instead put get s assignment info also make set status of reviewer class friend function of S assinment info
-doubts and submitted links inside s assignment info class (public)
+make submission links and doubts assignment and student specific
